Completed Web.Api

--- a/WebApiEmpty/WebApiEmpty/HomeTask/ADO.NET/ADO.NET.csproj
+++ b/WebApiEmpty/WebApiEmpty/HomeTask/ADO.NET/ADO.NET.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="C:\Users\Rubay-PC\source\repos\SigmaUniversity\HomeTask\Models\Models.csproj" />
+    <ProjectReference Include="..\Models\Models.csproj" />
   </ItemGroup>
 
   <ItemGroup>
