--- a/WebApiEmpty/WebApiEmpty/Task_Start/WebApi/appsettings.json
+++ b/WebApiEmpty/WebApiEmpty/Task_Start/WebApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "write here path your SQL Server"
+    "DefaultConnection": "Data Source=DESKTOP-QTE7RK8\\SQLEXPRESS;Initial Catalog=University;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
   "Logging": {
     "LogLevel": {
