--- a/Web.Api/WebApi/appsettings.json
+++ b/Web.Api/WebApi/appsettings.json
@@ -1,7 +1,7 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-QTE7RK8\\SQLEXPRESS;Initial Catalog=University;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
-  },
+  
+    "DefaultConnectionString": "Data Source=DESKTOP-QTE7RK8\\SQLEXPRESS;Initial Catalog=University;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  ,
   "Logging": {
     "LogLevel": {
       "Default": "Information",
