--- a/Web.Api/WebApi/WebApi.csproj
+++ b/Web.Api/WebApi/WebApi.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.5.1" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\DataContext\DataContext.csproj" />
     <ProjectReference Include="..\Models\Models.csproj" />
     <ProjectReference Include="..\UniversityServices\Services.csproj" />
   </ItemGroup>
